Add import of accounts to db

--- a/templates/admin/auth/test.html
+++ b/templates/admin/auth/test.html
@@ -22,6 +22,12 @@
     <textarea disabled>{{ labels }}</textarea>
     Predefined accounts:
     <textarea disabled>{{ predefined_accounts }}</textarea>
+    
+    <div>
+        <h2>Importera konton i databasen</h2>
+        <p>Genom att klicka på knappen importeras och förnyas hela kontoplanen.</p>
+        <button onclick="location.href='test/importaccount'">Importera konton</button>
+    </div>
 </div>
 
 <script type="text/javascript">
