--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -198,6 +198,7 @@
      data: function() {
          return {
              years: [],       
+             selected: "Total summa",
              selectedYear: '' ,
              showCostCentreDropdown: false,   
              showSecondaryCostCentreDropdown: false,   
