--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -117,7 +117,7 @@
             </div>
             <div class="clearfix"></div>
             <h2 v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">Metadata</h2>
-            <p v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">Frivilligt, men ju mer desto bättre. Förfallodatum kan hjälpa den som betalar att betala ut i tid.</p>
+            <p v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">Obligatoriskt</p>
             <div class="form" v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">
                 <div class="form-entry">
                     <span class="description">
@@ -127,7 +127,7 @@
                         <span class="hint"></span>
                     </span>
                     <div class="input">
-                        <input type="date" name="invoice-date" />
+                        <input type="date" name="invoice-date" required/>
                     </div>
                 </div>
 
@@ -139,7 +139,7 @@
                         <span class="hint"></span>
                     </span>
                     <div class="input">
-                        <input type="date" name="invoice-due-date" />
+                        <input type="date" name="invoice-due-date" required/>
                     </div>
                 </div>
                 <div class="clearfix"></div>
