--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -117,13 +117,13 @@
             </div>
             <div class="clearfix"></div>
             <h2 v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">Metadata</h2>
-            <p v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">Obligatoriskt</p>
             <div class="form" v-if="payed && payed != 'yes-i-have' && payed != 'no-i-will'">
                 <div class="form-entry">
                     <span class="description">
                         <label for="invoice-date" v-tooltip="{ content: 'Det datum fakturan utfärdades (står på fakturan)' }">
                             Fakturadatum:
                         </label>
+                        <span class="desc">Obligatoriskt</span>
                         <span class="hint"></span>
                     </span>
                     <div class="input">
@@ -136,6 +136,7 @@
                         <label for="invoice-due-date" v-tooltip="{ content: 'Det datum fakturan senast ska vara betald (står på fakturan)' }">
                             Förfallodatum:
                         </label>
+                        <span class="desc">Obligatoriskt</span>
                         <span class="hint"></span>
                     </span>
                     <div class="input">
