Make radio buttons required

--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -81,7 +81,7 @@
                             <label for="no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="invoice-original" value="yes" id="yes" />
+                            <input type="radio" name="invoice-original" value="yes" id="yes" required />
                             <label for="yes">Ja</label>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                             <label for="accounted-no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" />
+                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" required/>
                             <label for="accounted-yes">Ja</label>
                         </div>
                     </div>
