add "cf" when copying

--- a/templates/invoices/show.html
+++ b/templates/invoices/show.html
@@ -83,7 +83,7 @@
                      padding-right: 30px;
                      border-left-width: 0px;border-left-style: solid;
                      margin-left: 30px;" 
-                     v-on:click="copy( '{{ invoice.id }}')">📋</button>
+                     v-on:click="copy('cf {{ invoice.id }}')">📋</button>
                 </th>
                 <td>{{ invoice.id }}</td>
             </tr>
