--- a/templates/admin/account/overview.html
+++ b/templates/admin/account/overview.html
@@ -148,6 +148,10 @@
                     body: form
                 })
                 .then(res => {
+                    if (!res.ok){
+                        alert("Det uppstod ett fel i att spara utlägget. HTTP Kod: " + res.status)
+                        return  
+                    }
                     console.log(res)
                     return res.text()
                 })
