alert when non 200

--- a/templates/admin/account/overview.html
+++ b/templates/admin/account/overview.html
@@ -148,6 +148,10 @@
                     body: form
                 })
                 .then(res => {
+                    if (!res.ok){
+                        alert("Det gick inte att spara utlägget. HTTP statuskod: " + res.status); 
+                        return
+                    }
                     console.log(res)
                     return res.text()
                 })
