--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -61,11 +61,12 @@
                     </span>
                     <div class="input">
                         <div style="padding: 8px 0;">
-                            <input type="file" name="files" id="file" data-multiple-caption="{count} filer valda" multiple="multiple" required="required">
+                            <input type="file" name="files" id="file" data-multiple-caption="{count} filer valda" multiple="multiple" required="required" onchange="document.getElementById('filename').innerText = this.value.split('\\').pop()">
                             <label for="file" class="file">
                                 <span class="icon theme-color"><i class="fa fa-upload"></i></span>
                                 <span class="val">Välj filer</span>
                             </label>
+                            <span id="filename" style="margin-left:1em">test</span>
                         </div>
                     </div>
                 </div>
@@ -81,7 +82,7 @@
                             <label for="no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="invoice-original" value="yes" id="yes" />
+                            <input type="radio" name="invoice-original" value="yes" id="yes" required />
                             <label for="yes">Ja</label>
                         </div>
                     </div>
@@ -98,7 +99,7 @@
                             <label for="accounted-no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" />
+                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" required/>
                             <label for="accounted-yes">Ja</label>
                         </div>
                     </div>
