--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -82,7 +82,7 @@
                             <label for="no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="invoice-original" value="yes" id="yes" required />
+                            <input type="radio" name="invoice-original" value="yes" id="yes" />
                             <label for="yes">Ja</label>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             <label for="accounted-no">Nej</label>
                         </div>
                         <div class="radio">
-                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" required/>
+                            <input type="radio" name="accounted" value="accounted-yes" id="accounted-yes" v-model="accounted" />
                             <label for="accounted-yes">Ja</label>
                         </div>
                     </div>
